css box model solution

--- a/Mod3-Workbook/Week7/Day2/solutions/04-css-box-model/index.html
+++ b/Mod3-Workbook/Week7/Day2/solutions/04-css-box-model/index.html
@@ -13,6 +13,7 @@
         src="https://appacademy-open-assets.s3-us-west-1.amazonaws.com/Modular-Curriculum/content/week-07/practice-css-box-model/logo.png" />
     <h1>CSS Box Model</h1>
     <hr />
+
     <div class="box">
         120px<br />
         + 20px padding<br />
@@ -24,7 +25,10 @@
     <div class="footer">
         <p class="quote">
             "If your dreams don't scare you, they are too small"
-            <span class="attribution">- Richard Branson</span>
+            <span class="attribution">- Richard Branson
+                <!-- <div>Some Text Here</div> -->
+                <!-- cant render block element in a span -->
+            </span>
         </p>
     </div>
 </body>
