--- a/Mod3-Workbook/Week7/Day3/solutions/02-css-grid/index.html
+++ b/Mod3-Workbook/Week7/Day3/solutions/02-css-grid/index.html
@@ -33,23 +33,23 @@
     This is great for items that all display at the same size, like image
     thumbnails (represented by numbers in this example).
     <div class="grid-container-flow">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>
-        <div>13</div>
-        <div>14</div>
-        <div>15</div>
-        <div>16</div>
-        <div>17</div>
+        <div class="grid-items">1</div>
+        <div class="grid-items">2</div>
+        <div class="grid-items">3</div>
+        <div class="grid-items">4</div>
+        <div class="grid-items">5</div>
+        <div class="grid-items">6</div>
+        <div class="grid-items">7</div>
+        <div class="grid-items">8</div>
+        <div class="grid-items">9</div>
+        <div class="grid-items">10</div>
+        <div class="grid-items">11</div>
+        <div class="grid-items">12</div>
+        <div class="grid-items">13</div>
+        <div class="grid-items">14</div>
+        <div class="grid-items">15</div>
+        <div class="grid-items">16</div>
+        <div class="grid-items">17</div>
     </div>
 </body>
 
