--- a/Mod3-Workbook/Week8/Day1/solution/demo/index.html
+++ b/Mod3-Workbook/Week8/Day1/solution/demo/index.html
@@ -7,7 +7,7 @@
     <title>Demo</title>
 </head>
 <body>
-    <form method="post" action="/userinfo">
+    <form method="post" action="/login">
         <label for="name">Name</label>
         <input name='name'/>
         <label for="age">Age</label>
