element selection solution

--- a/Mod3-Workbook/Week9/Day2/solutions/02-element-selection/index.html
+++ b/Mod3-Workbook/Week9/Day2/solutions/02-element-selection/index.html
@@ -18,6 +18,7 @@
             <li class="seed">Oranges</li>
             <li class="seedless">Peaches</li>
             <li class="seedless">Grapes</li>
+        
         </ul>
     </section>
     <section id="two">
@@ -31,6 +32,9 @@
             <li>Two</li>
             <li class="odd">Three</li>
             <li>Four</li>
+            <ol>
+                <li class="nested"></li>
+            </ol>
         </ol>
     </section>
     <section id="three">
