--- a/Mod3-Workbook/Week9/Day2/solutions/03-create-remove-elements/index.html
+++ b/Mod3-Workbook/Week9/Day2/solutions/03-create-remove-elements/index.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <section class="gallery">
-        <ul>
+        <ul id="image-container">
             <li>
                 <figure>
                     <img src="https://images.dog.ceo/breeds/hound-afghan/n02088094_1007.jpg" />
